--- a/style.css
+++ b/style.css
@@ -8,32 +8,33 @@
     --border: 0.3rem solid rgba(255,255,255,0.3);
 }
 *{
-    margin: 0;
-    padding: 0;
     font-family: 'Roboto', sans-serif;
+    margin:0; padding:0;
     box-sizing: border-box;
-    outline: none;
-    bottom: none;
+    outline: none; border:none;
     text-decoration: none;
     text-transform: capitalize;
     transition: .2s linear;
 }
 html{
     font-size: 62.5%;
-    overflow: hidden;
+    /* overflow: hidden; */
     scroll-padding-top: 9rem;
     scroll-behavior: smooth;
 }
 html::-webkit-scrollbar{
-    width: 0.8rem;
+    width: .8rem;
 }
+
 html::-webkit-scrollbar-track{
     background: transparent;
 }
+
 html::-webkit-scrollbar-thumb{
     background: #fff;
     border-radius: 5rem;
 }
+
 body{
     background: var(--bg);
 }
@@ -174,24 +175,68 @@ header{
     background-size: cover;
     background-position: center;
 }
-.content{
+.home .content{
     max-width: 60rem;
 }
-.content h3{
+.home .content h3{
     color: #fff;
     font-size: 6rem;
     text-transform: uppercase;
 }
-.content p{
+.home .content p{
     
     font-size: 2rem;
     color: #eee;
     line-height: 1.8;
     padding: 1rem 0;
 }
-.content .btn2{
+.home .content .btn{
     width: 30%;
 }
+
+/* about section */
+.heading{
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    padding-bottom: 3.5rem;
+    font-size: 4rem;
+}
+.heading span{
+    color: var(--main-color);
+    text-transform: uppercase;
+}
+.row{
+    display: flex;
+    align-items: center;
+    background: var(--black);
+    flex-wrap: wrap;
+}
+.row .image{
+    flex: 1 1 45rem;
+}
+.row .image img{
+    width: 100%;
+}
+.row .content{
+    flex: 1 1 45rem;
+    padding: 2rem;
+}
+.row .content h3{
+    font-size: 3rem;
+    color: #fff;
+}
+.row .content p{
+    font-size: 1.6rem;
+    color: #ccc;
+    padding: 1rem 0;
+    line-height: 1.8;
+}
+.row .btn{
+    width: 30%;
+}
+
+/* menu section */
 
 /* media queries */
 @media (max-width: 991px) {
